# rocket-htmx-rspack

./: .gitignore  Cargo.toml  README.md  Rocket.toml  bun.lockb  package.json  rspack.config.ts  tailwind.config.js
migrations/: 20240804015254_create-todos-table.sql  20240804015805_add-default-todos.sql
src/: index.ts  main.rs
templates/: base.html  index.html  todo.html  todos.html
