[package]
name = "todos-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {  version = "0.5.1" , features = ["json"]}
askama = "0.12.1"
askama_rocket = "0.12.0"
sqlx = { version = "0.7.4", features = ["sqlite", "macros", "chrono"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.39.2"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]